--- a/MECSharp_31_AvoidMarshallingContextUnnecess_GUI/App.xaml
+++ b/MECSharp_31_AvoidMarshallingContextUnnecess_GUI/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MECSharp_31_AvoidMarshallingContextUnnecess_GUI"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MECSharp_31_AvoidMarshallingContextUnnecess_GUI.xaml">
     <Application.Resources>
          
     </Application.Resources>
